--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
+
+
 				<configuration>
+					<useSystemClassLoader>true</useSystemClassLoader>
+					<useManifestOnlyJar>false</useManifestOnlyJar>
+					<forkCount>1</forkCount>
 					<suiteXmlFiles>
 						<file>${XML_FILE}</file>
 					</suiteXmlFiles>
