--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     - "$PWD:/etc/selenoid"
     - "/var/run/docker.sock:/var/run/docker.sock"
     - "/docker/video:/opt/selenoid/video"
+    - "./config:/etc/selenoid"
   environment:
     - OVERRIDE_VIDEO_OUTPUT_DIR=/opt/selenium/video
   command: ["-conf", "/etc/selenoid/browsers.json", "-video-output-dir", "/opt/selenoid/video"]
