--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -112,6 +112,32 @@
 					</properties>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>validate</id>
+						<phase>validate</phase>
+						<configuration>
+							<configLocation>src/test/resources/checkstyle/sun_checks.xml</configLocation>
+							<encoding>UTF-8</encoding>
+							<consoleOutput>true</consoleOutput>
+							<failsOnError>true</failsOnError>
+							<linkXRef>false</linkXRef>
+							<sourceDirectories>
+								<sourceDirectory>src/test/java/com/logigear/scrumboard/page</sourceDirectory>
+								<sourceDirectory>src/test/java/com/logigear/utils</sourceDirectory>
+							</sourceDirectories>
+
+						</configuration>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
