--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -13,6 +13,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<checkstyle.config.location>demo_checkstyle.xml</checkstyle.config.location>
 	</properties>
 	<repositories>
 		<repository>
@@ -95,8 +96,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
-
-
+				
 				<configuration>
 					<useSystemClassLoader>true</useSystemClassLoader>
 					<useManifestOnlyJar>false</useManifestOnlyJar>
@@ -112,18 +112,25 @@
 					</properties>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-checkstyle-plugin</artifactId>
+		        <version>3.0.0</version>	
+		           
+		     </plugin>
 		</plugins>
 	</build>
 	<reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>3.0.0</version>
-        <configuration>
-          <configLocation>checkstyle.xml</configLocation>
-        </configuration>
-      </plugin>
-    </plugins>
+	    <plugins>
+	      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-checkstyle-plugin</artifactId>
+	        <version>3.0.0</version>
+	        <configuration>
+	          <configLocation>demo_checkstyle.xml</configLocation>
+	        </configuration>
+	      </plugin>
+	    </plugins>
   </reporting>
 </project>
